# pico_MAX31856

./: CMakeLists.txt  README.md  main.cpp
MAX31856/: CMakeLists.txt  MAX31856.cpp  MAX31856.hpp
